src/deployments/operator-httpbin/api-template.yaml
apiVersion: tyk.tyk.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: httpbin-red-product
spec:
  name: Product Red
  state: active
  active: true
  partitions:
    acl: true
  access_rights_array:
    - name: httpbin
      namespace: replace_namespace
      versions:
        - Default
---
apiVersion: tyk.tyk.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: httpbin-blue-product
spec:
  name: Product Blue
  state: active
  active: true
  partitions:
    acl: true
  access_rights_array:
    - name: httpbin
      namespace: replace_namespace
      versions:
        - Default
---
apiVersion: tyk.tyk.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: httpbin-green-product
spec:
  name: Product Green
  state: active
  active: true
  partitions:
    acl: true
  access_rights_array:
    - name: httpbin
      namespace: replace_namespace
      versions:
        - Default
---
apiVersion: tyk.tyk.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: httpbin-plan-gold
spec:
  name: Gold Plan
  state: active
  active: true
  partitions:
    quota: true
    rate_limit: true
  rate: 10000
  access_rights_array:
    - name: httpbin
      namespace: replace_namespace
      versions:
        - Default
---
apiVersion: tyk.tyk.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: httpbin-plan-silver
spec:
  name: Silver Plan
  state: active
  active: true
  rate: 1000
  partitions:
    quota: true
    rate_limit: true
  access_rights_array:
    - name: httpbin
      namespace: replace_namespace
      versions:
        - Default
---
apiVersion: tyk.tyk.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: httpbin-plan-bronze
spec:
  name: Bronze Plan
  state: active
  active: true
  rate: 60
  partitions:
    quota: true
    rate_limit: true
  access_rights_array:
    - name: httpbin
      namespace: replace_namespace
      versions:
        - Default
---
apiVersion: tyk.tyk.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: httpbin-plan-basic
spec:
  name: Basic Plan
  state: active
  active: true
  rate: 3
  partitions:
    quota: true
    rate_limit: true
  access_rights_array:
    - name: httpbin
      namespace: replace_namespace
      versions:
        - Default
