src/deployments/operator-httpbin/httpbin-protected-api-template.yaml
apiVersion: tyk.tyk.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: httpbin-protected-product-1
spec:
  name: httpbin-protected-product-1
  state: active
  active: true
  partitions:
    acl: true
  access_rights_array:
    - name: httpbin-protected
      namespace: api_namespace
      versions:
        - Default
---
apiVersion: tyk.tyk.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: httpbin-protected-product-2
spec:
  name: httpbin-protected-product-2
  state: active
  active: true
  partitions:
    acl: true
  access_rights_array:
    - name: httpbin-protected
      namespace: api_namespace
      versions:
        - Default
---
apiVersion: tyk.tyk.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: httpbin-protected-product-3
spec:
  name: httpbin-protected-product-3
  state: active
  active: true
  partitions:
    acl: true
  access_rights_array:
    - name: httpbin-protected
      namespace: api_namespace
      versions:
        - Default
---
apiVersion: tyk.tyk.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: httpbin-protected-plan-gold
spec:
  name: httpbin-protected-plan-gold
  state: active
  active: true
  partitions:
    quota: true
    rate_limit: true
  rate: 10000
  access_rights_array:
    - name: httpbin-protected
      namespace: api_namespace
      versions:
        - Default
---
apiVersion: tyk.tyk.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: httpbin-protected-plan-silver
spec:
  name: httpbin-protected-plan-silver
  state: active
  active: true
  rate: 1000
  partitions:
    quota: true
    rate_limit: true
  access_rights_array:
    - name: httpbin-protected
      namespace: api_namespace
      versions:
        - Default
---
apiVersion: tyk.tyk.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: httpbin-protected-plan-bronze
spec:
  name: httpbin-protected-plan-bronze
  state: active
  active: true
  rate: 60
  partitions:
    quota: true
    rate_limit: true
  access_rights_array:
    - name: httpbin-protected
      namespace: api_namespace
      versions:
        - Default
